--- a/style_tarefas.css
+++ b/style_tarefas.css
@@ -18,22 +18,27 @@ body {
     align-items: center;
     margin-bottom: auto;
     height: 10%;
+    width: 10%;
     color: rgb(221, 98, 10);
 }
 
 .tarefas-container{
-    width: 20%;
-    padding: 15%;
+    width: 40%;
+    padding: 20%;
     border: 50% solid #171817;
     border-radius: 4px;
     color:rgb(221, 98, 10)
 }
 
 button {
-    width: 50%;
-    padding: 1%;
+    width: 40%;
+    padding: 2%;
     background-color: gray;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
+
+ol#lista-tarefas li {
+    font-size: 180%;  
+  }
